# poi-collector

./: .gitignore  README.md  __init__.py  collector.py  database.py  drone_client.py  enhanced_collector.py  inspect_db.py  manage.bat  manage.py  multi_collector.py  multi_database.py  package-lock.json  package.json  region_config.py  requirements.txt  service.py  start.bat  tailwind.config.js  test_import.py  verify_schema.py  version.json  vite.config.ts  web_server.py
.claude/: settings.local.json
.github/workflows/: cleanup.yml  release.yml
scripts/: bump-version.cjs  generate_icons.mjs  generate_icons.py  generate_regions.mjs  sync-version.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  region_config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: regions.json
src-tauri/src/: commands.rs  config.rs  coords.rs  database.rs  lib.rs  main.rs  regions.rs
src-tauri/src/collectors/: amap.rs  baidu.rs  mod.rs  osm.rs  tianditu.rs
src-tauri/src/tile_downloader/: boundaries.rs  commands.rs  database.rs  downloader.rs  mod.rs  tile_proxy.rs  types.rs
src-tauri/src/tile_downloader/storage/: folder.rs  mbtiles.rs  mod.rs  zip_storage.rs
src/components/: CategoryConfigDialog.tsx  DragDrawPolygon.tsx  DragDrawRectangle.tsx  DrawRectangle.tsx  FullscreenMapDialog.tsx  Layout.tsx  MapSearchBox.tsx  POIMap.tsx  RegionBoundary.tsx  RegionSelector.tsx  SettingsDialog.tsx  TileBoundsMap.tsx  TilePreviewLayer.tsx  index.ts  theme-provider.tsx  theme-toggle.tsx
src/pages/: Export.tsx  (+7 more)
static/: app.js  style.css
templates/: index.html
(+4 files in other folders)
