[package]
name = "poi-collector-app"
version = "0.2.0"
description = "Multi-platform POI data collector"
authors = ["chenqi92"]
edition = "2021"

[lib]
name = "poi_collector_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2"
futures = "0.3"
async-channel = "2"
parking_lot = "0.12"



